// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`current-props.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
        type="button"
      >
        <span
          class="t-button__text"
        >
          跳转到第 1 项
        </span>
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
        type="button"
      >
        <span
          class="t-button__text"
        >
          跳转到第 2 项
        </span>
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
        type="button"
      >
        <span
          class="t-button__text"
        >
          跳转到第 3 项
        </span>
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
        type="button"
      >
        <span
          class="t-button__text"
        >
          跳转到第 4 项
        </span>
      </button>
    </div>
    <div
      class="t-swiper"
    >
      <div
        class="t-swiper__content"
      >
        <div
          class="t-swiper__swiper-wrap--horizontal"
          style="width: 500%; left: -0%; transition: left 0.3s;"
        >
          <div>
            <div
              class="t-alert t-alert--success"
            >
              <div
                class="t-alert__icon"
              >
                <svg
                  class="t-icon t-icon-check-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-alert__content"
              >
                <div
                  class="t-alert__message"
                >
                  <div
                    class="t-alert__description"
                  >
                    这是一条成功的消息提示
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="t-alert t-alert--info"
            >
              <div
                class="t-alert__icon"
              >
                <svg
                  class="t-icon t-icon-info-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-alert__content"
              >
                <div
                  class="t-alert__message"
                >
                  <div
                    class="t-alert__description"
                  >
                    这是一条普通的消息提示
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="t-alert t-alert--warning"
            >
              <div
                class="t-alert__icon"
              >
                <svg
                  class="t-icon t-icon-error-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-alert__content"
              >
                <div
                  class="t-alert__message"
                >
                  <div
                    class="t-alert__description"
                  >
                    这是一条警示消息
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="t-alert t-alert--error"
            >
              <div
                class="t-alert__icon"
              >
                <svg
                  class="t-icon t-icon-error-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-alert__content"
              >
                <div
                  class="t-alert__message"
                >
                  <div
                    class="t-alert__description"
                  >
                    高危操作/出错信息提示
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="t-alert t-alert--success"
            >
              <div
                class="t-alert__icon"
              >
                <svg
                  class="t-icon t-icon-check-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-alert__content"
              >
                <div
                  class="t-alert__message"
                >
                  <div
                    class="t-alert__description"
                  >
                    这是一条成功的消息提示
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <ul
        class="t-swiper__trigger-wrap"
      >
        <li
          class="t-swiper__trigger--active"
        />
        <li
          class=""
        />
        <li
          class=""
        />
        <li
          class=""
        />
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`swiper.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block--swiper"
  >
    <div
      class="t-swiper"
    >
      <div
        class="t-swiper__content"
      >
        <div
          class="t-swiper__swiper-wrap--horizontal"
          style="width: 500%; left: -0%; transition: left 0.3s;"
        >
          <div>
            <div
              class="t-alert t-alert--success"
            >
              <div
                class="t-alert__icon"
              >
                <svg
                  class="t-icon t-icon-check-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-alert__content"
              >
                <div
                  class="t-alert__message"
                >
                  <div
                    class="t-alert__description"
                  >
                    这是一条成功的消息提示
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="t-alert t-alert--info"
            >
              <div
                class="t-alert__icon"
              >
                <svg
                  class="t-icon t-icon-info-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-alert__content"
              >
                <div
                  class="t-alert__message"
                >
                  <div
                    class="t-alert__description"
                  >
                    这是一条普通的消息提示
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="t-alert t-alert--warning"
            >
              <div
                class="t-alert__icon"
              >
                <svg
                  class="t-icon t-icon-error-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-alert__content"
              >
                <div
                  class="t-alert__message"
                >
                  <div
                    class="t-alert__description"
                  >
                    这是一条警示消息
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="t-alert t-alert--error"
            >
              <div
                class="t-alert__icon"
              >
                <svg
                  class="t-icon t-icon-error-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-alert__content"
              >
                <div
                  class="t-alert__message"
                >
                  <div
                    class="t-alert__description"
                  >
                    高危操作/出错信息提示
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="t-alert t-alert--success"
            >
              <div
                class="t-alert__icon"
              >
                <svg
                  class="t-icon t-icon-check-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-alert__content"
              >
                <div
                  class="t-alert__message"
                >
                  <div
                    class="t-alert__description"
                  >
                    这是一条成功的消息提示
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <ul
        class="t-swiper__trigger-wrap"
      >
        <li
          class="t-swiper__trigger--active"
        />
        <li
          class=""
        />
        <li
          class=""
        />
        <li
          class=""
        />
      </ul>
    </div>
    <div
      class="t-swiper"
    >
      <div
        class="t-swiper__content"
      >
        <div
          class="t-swiper__swiper-wrap--horizontal"
          style="width: 500%; left: -0%; transition: left 0.5s;"
        >
          <div>
            <div
              class="t-alert t-alert--success"
            >
              <div
                class="t-alert__icon"
              >
                <svg
                  class="t-icon t-icon-check-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-alert__content"
              >
                <div
                  class="t-alert__message"
                >
                  <div
                    class="t-alert__description"
                  >
                    这是一条成功的消息提示
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="t-alert t-alert--info"
            >
              <div
                class="t-alert__icon"
              >
                <svg
                  class="t-icon t-icon-info-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-alert__content"
              >
                <div
                  class="t-alert__message"
                >
                  <div
                    class="t-alert__description"
                  >
                    这是一条普通的消息提示
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="t-alert t-alert--warning"
            >
              <div
                class="t-alert__icon"
              >
                <svg
                  class="t-icon t-icon-error-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-alert__content"
              >
                <div
                  class="t-alert__message"
                >
                  <div
                    class="t-alert__description"
                  >
                    这是一条警示消息
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="t-alert t-alert--error"
            >
              <div
                class="t-alert__icon"
              >
                <svg
                  class="t-icon t-icon-error-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-alert__content"
              >
                <div
                  class="t-alert__message"
                >
                  <div
                    class="t-alert__description"
                  >
                    高危操作/出错信息提示
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="t-alert t-alert--success"
            >
              <div
                class="t-alert__icon"
              >
                <svg
                  class="t-icon t-icon-check-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-alert__content"
              >
                <div
                  class="t-alert__message"
                >
                  <div
                    class="t-alert__description"
                  >
                    这是一条成功的消息提示
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <ul
        class="t-swiper__trigger-wrap"
      >
        <li
          class="t-swiper__trigger--active"
        />
        <li
          class=""
        />
        <li
          class=""
        />
        <li
          class=""
        />
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-swiper"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__swiper-wrap--vertical"
        style="height: 500%; top: -0%; transition: top 0.3s;"
      >
        <div>
          <div
            class="t-alert t-alert--success"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-check-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  这是一条成功的消息提示
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="t-alert t-alert--info"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-info-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  这是一条普通的消息提示
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="t-alert t-alert--warning"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-error-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  这是一条警示消息
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="t-alert t-alert--error"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-error-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  高危操作/出错信息提示
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="t-alert t-alert--success"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-check-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  这是一条成功的消息提示
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ul
      class="t-swiper__trigger-wrap"
    >
      <li
        class="t-swiper__trigger--active"
      />
      <li
        class=""
      />
      <li
        class=""
      />
      <li
        class=""
      />
    </ul>
  </div>
</DocumentFragment>
`;
